fixing form inner wrapper on mobile

--- a/src/style.sass
+++ b/src/style.sass
@@ -31,6 +31,7 @@ $green: #14a760
 
 // SCREEN WIDTH
 $mobile: 430px
+$mobile-only: 768px
 $tablet: 1024px
 $desktop: 1440px
 $container-max-width: 1250px
