--- a/src/styles/components/create-form.sass
+++ b/src/styles/components/create-form.sass
@@ -25,6 +25,7 @@
 
   &__inner-wrapper
     display: grid
+    max-width: 100%
     grid-template-columns: repeat(2, 1fr)
     gap: 35px
 
