--- a/src/styles/components/sell.sass
+++ b/src/styles/components/sell.sass
@@ -6,7 +6,7 @@
     grid-template-columns: 2fr 1fr
     gap: 70px
     margin: auto
-    @media (max-width: $mobile)
+    @media (max-width: $mobile-only)
       display: flex
       flex-direction: column
       gap: 40px
