--- a/src/styles/components/upload.sass
+++ b/src/styles/components/upload.sass
@@ -4,7 +4,7 @@
   flex-direction: column
   align-items: center
   gap: 60px
-  @media (max-width: $mobile)
+  @media (max-width: $mobile-only)
     order: -1
   &__wrapper
     text-align: center
@@ -14,7 +14,7 @@
     box-shadow: 0px 20px 80px 0 rgba($black, 15%), 0px -20px 80px 0 rgba($black, 15%)
     &:has(.upload__preview)
       padding: 0
-    @media (max-width: $mobile)
+    @media (max-width: $mobile-only)
       display: none
   &__description
     @include poppins-regular
